web/src/components/NavBar.css
nav.navbar {
    justify-content: space-between;
    padding: 18px 0;
    position: fixed;
    width: 100%;
    top: 0;
    z-index: 9999;
    transition: 0.32s ease-in-out;
    flex-wrap: nowrap;
    backdrop-filter: blur(2px);
    background-color: transparent;
    /* height: 60px; */
    /*todo*/
}

nav.navbar::before {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    pointer-events: none;
    z-index: 1;

    background: linear-gradient(to bottom,
            rgba(0, 0, 0, 0.8) 0%,
            /* subtle dark at top */
            rgba(0, 0, 0, 0) 100%
            /* fully transparent at bottom */
        );
    mix-blend-mode: lighten;
    /* helps simulate blur fading */
}

.custom-container {
    padding-left: 50px !important;
    padding-right: 50px !important;
    max-width: 1400px;
    /* Set a fixed max width if desired
    */
    margin: 0 auto;
}

nav.navbar.scrolled {
    padding: 6px 0;
    /* background-color: #171717; */
}

nav.navbar a.navbar-brand {
    padding-top: 8px;
    /* font-size: 30px; */
    font-family: 'Vogue', sans-serif;
    color: white;
}

.navbar-link:last-of-type {
    margin-right: var(--gap-link-icons);
}

nav.navbar {
    margin: 0 auto;
}

nav.navbar .navbar-nav .nav-link.navbar-link {
    display: flex;
    align-items: center;
    font-weight: 400;
    color: #fff !important;
    letter-spacing: 0.8px;
    transition: gap 0.1s ease-in-out;
    font-size: 18px;
    padding: 0 0 0 var(--navbar-spacing);
    opacity: 0.65;
}

/* 
  nav.navbar .nav-link.navbar-link {
    padding: 0 0 0 var(--navbar-spacing);
  } */

nav.navbar .navbar-nav a.nav-link.navbar-link:hover,
nav.navbar .navbar-nav a.nav-link.navbar-link.active {
    opacity: 1;
}

span.navbar-text {
    display: flex;
    align-items: center;
    padding: 0;
    gap: 8px;
    flex-wrap: nowrap;
    /* min-width: 300px !important; */
}

.social-icon {
    min-width: 150px;
}

.social-icon a img {
    width: 60%;
    z-index: 1;
    transition: 0.3s ease-in-out;
}

.social-icon a {
    width: 42px;
    height: 42px;
    background: rgba(217, 217, 217, 0.1);
    display: inline-flex;
    border-radius: 50%;
    align-items: center;
    margin-left: 8px;
    justify-content: center;
    line-height: 1;
    border: 1px solid rgba(255, 255, 255, 0.5);
}

.social-icon a:before {
    content: "";
    width: 42px;
    height: 42px;
    position: absolute;
    background-color: #ffffff;
    border-radius: 50%;
    transform: scale(0);
    transition: 0.3s ease-in-out;
}

.social-icon a:hover:before {
    transform: scale(1);
}

.social-icon a:hover img {
    filter: brightness(0%) saturate(100%) invert(0%) sepia(7%) saturate(98%) hue-rotate(346deg) brightness(100%) contrast(98%);
}

.navbar-text button {
    font-weight: 700;
    color: #fff;
    border: 1px solid #fff;
    padding: 15px 25px;
    font-size: 15px;
    margin-left: 18px;
    position: relative;
    background-color: transparent;
    transition: 0.3s ease-in-out;
}

.navbar-text button span {
    z-index: 1;
}

.navbar-text button::before {
    content: "";
    width: 0%;
    height: 100%;
    position: absolute;
    background-color: #fff;
    left: 0;
    top: 0;
    z-index: -1;
    transition: 0.3s ease-in-out;
}

.navbar-text button:hover {
    color: #171717;
}

.navbar-text button:hover::before {
    width: 100%;
    height: 100%;
    position: absolute;
}


nav.navbar .navbar-toggler:active,
nav.navbar .navbar-toggler:focus {
    outline: none;
    box-shadow: none;
}

nav.navbar .navbar-toggler-icon {
    width: 24px;
    height: 17px;
    background-image: none;
    position: relative;
    border-bottom: 2px solid #fff;
    transition: all 300ms linear;
    top: -2px;
}

nav.navbar .navbar-toggler-icon:focus {
    border-bottom: 2px solid #fff;
}


nav.navbar .navbar-toggler-icon::after,
nav.navbar .navbar-toggler-icon::before {
    width: 24px;
    position: absolute;
    height: 2px;
    background-color: #fff;
    top: 0;
    left: 0;
    content: '';
    z-index: 2;
    transition: all 300ms linear;
}

nav.navbar .navbar-toggler-icon::after {
    top: 8px;
}

nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon::after {
    transform: rotate(45deg);
    background-color: #fff;
    height: 2px;
}

nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon::before {
    transform: translateY(8px) rotate(-45deg);
    background-color: #fff;
    height: 2px;
}

nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
    border-color: transparent;
}

.navbar-collapse {
    justify-content: flex-end;
    /* Aligns content to the right */
}

.navbar-collapse.collapse {
    display: none;
    /* Default Bootstrap behavior for collapsed state */
}

.navbar-collapse.collapse.show {

    display: flex;
    /* When expanded, show and apply flex layout */
}

.vvd {
    /* height: 30px; */
    display: flex;
    min-width: 170px;
    height: 40px;
    align-items: center;
    justify-content: center;
    white-space: nowrap;
}

